<resources>
    <string name="donations__button_close">Close</string>
    <string name="donations__flattr">Flattr</string>
    <string name="donations__description">"Do you find this application useful?
Support it's development by flattring it or sending donations to the developer!"</string>
    <string name="donations__flattr_description">Flattr takes 10 % as a monthly fee!</string>
    <string name="donations__google_android_market">Google Play Store</string>
    <string name="donations__google_android_market_not_supported_title">In-App Donations are not supported</string>
    <string name="donations__google_android_market_not_supported">In-App Donations are not supported. Is Google Play Store installed correctly?</string>
    <string name="donations__google_android_market_description">Google takes 30 % off every donation!</string>
    <string name="donations__google_android_market_donate_button">Donate!</string>
    <string name="donations__google_android_market_text">How much?</string>
    <string name="donations__paypal">PayPal</string>
    <string name="donations__paypal_description">You can choose how much you want to donate after clicking the button!</string>
    <string name="donations__thanks_dialog_title">Thanks!</string>
    <string name="donations__thanks_dialog">"Thanks for donating!
I really appreciate this!"</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="donations__flattr_project_url">http://code.google.com/p/ad-away/</string>
    <string name="donations__flattr_url">flattr.com/thing/369138/AdAway-Ad-blocker-for-Android</string>
    <string name="donations__google_pubkey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAg8bTVFK5zIg4FGYkHKKQ/j/iGZQlXU0qkAv2BA6epOX1ihbMz78iD4SmViJlECHN8bKMHxouRNd9pkmQKxwEBHg5/xDC/PHmSCXFx/gcY/xa4etA1CSfXjcsS9i94n+j0gGYUg69rNkp+p/09nO9sgfRTAQppTxtgKaXwpfKe1A8oqmDUfOnPzsEAG6ogQL6Svo6ynYLVKIvRPPhXkq+fp6sJ5YVT5Hr356yCXlM++G56Pk8Z+tPzNjjvGSSs/MsYtgFaqhPCsnKhb55xHkc8GJ9haq8k3PSqwMSeJHnGiDq5lzdmsjdmGkWdQq2jIhKlhMZMm5VQWn0T59+xjjIIwIDAQAB</string>
    <string name="donations__paypal_user">dominik@dominikschuermann.de</string>
    <string name="donations__paypal_currency_code">EUR</string>
    <string name="donations__paypal_item_name">AdAway Donation</string>
    <string name="app_name">AdAway</string>
    <string name="button_exit">Exit</string>
    <string name="button_apply">Download files and apply ad blocking</string>
    <string name="button_close">Close</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_revert">Disable ad blocking</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_apply_text">All hosts files from the defined sources are downloaded, merged with your own lists and installed as one hosts file on your system.</string>
    <string name="button_revert_text">Restores the default hosts file on your system.</string>
    <string name="button_save">Save</string>
    <string name="button_webserver_toggle_checked">Webserver is running</string>
    <string name="button_webserver_toggle_unchecked">Webserver is not running</string>
    <string name="button_webserver_toggle_text">Start or stop webserver on localhost to answer requests to blocked hostnames.</string>
    <string name="button_help">Help</string>
    <string name="button_tcpdump_text">Tcpdump is a tool to monitor DNS requests and save them in a log file. You can start it in the background, run applications that display ads, and afterwards analyze the DNS requests using the log file. Possible ad server can then be added to your blacklist.</string>
    <string name="button_tcpdump_toggle_checked">Tcpdump is running!</string>
    <string name="button_tcpdump_toggle_unchecked">Tcpdump is not running!</string>
    <string name="button_tcpdump_open">Open log file</string>
    <string name="button_tcpdump_delete">Delete log file</string>
    <string name="checkbox_list_add_dialog_title">Add</string>
    <string name="checkbox_list_empty">Empty list</string>
    <string name="checkbox_list_empty_text">You can add items from the action bar.</string>
    <string name="checkbox_list_context_delete">Delete</string>
    <string name="checkbox_list_footer">After adding new items to this list you have to apply AdAway again!</string>
    <string name="checkbox_list_edit_dialog_title">Edit</string>
    <string name="checkbox_list_context_title">Edit Entry</string>
    <string name="checkbox_list_context_edit">Edit</string>
    <string name="lists_tab_whitelist">Whitelist</string>
    <string name="lists_tab_blacklist">Blacklist</string>
    <string name="lists_tab_blacklist_short">Black</string>
    <string name="lists_tab_whitelist_short">White</string>
    <string name="lists_tab_redirection_list_short">Redirection</string>
    <string name="lists_tab_redirection_list">Redirection List</string>
    <string name="list_dialog_url">URL:</string>
    <string name="list_dialog_hostname">Hostname:</string>
    <string name="list_dialog_whitelist_hostname">"Hostname:
(Wildcard characters * and ? are allowed!)"</string>
    <string name="list_dialog_ip">IP (IPv4 or IPv6):</string>
    <string name="import_dialog">Importing…</string>
    <string name="export_dialog">Exporting…</string>
    <string name="export_success">"Exported all entries to a file called 'adaway-export' on your sdcard."</string>
    <string name="status_checking">Checking for update…</string>
    <string name="status_reverting">Reverting…</string>
    <string name="status_reverting_subtitle">Creating standard hosts file</string>
    <string name="status_checking_subtitle">Checking if update is available</string>
    <string name="status_update_available">Update available</string>
    <string name="status_update_available_subtitle">Newer hosts files available</string>
    <string name="status_no_connection">No Internet connection</string>
    <string name="status_no_connection_subtitle">No Internet connection available</string>
    <string name="status_download_fail">Unavailable sources</string>
    <string name="status_download_fail_subtitle_new">No hosts sources are reachable!</string>
    <string name="status_enabled">Enabled</string>
    <string name="status_enabled_subtitle">Newest hosts files enabled</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_disabled_subtitle">Disabled</string>
    <string name="apply_symlink_missing">"Symlink from your target to /system/etc/hosts is not existing or incorrect! AdAway will not work if it is not pointing to the right file.

Do you want to try creating a symlink?"</string>
    <string name="apply_symlink_missing_title">Symlink missing</string>
    <string name="apply_not_enough_space">"Not enough space on the partition!
Try changing the target hosts file in preferences to /data/data/hosts."</string>
    <string name="apply_not_enough_space_title">Not enough space</string>
    <string name="apply_private_file_fail">Downloaded file could not be read.</string>
    <string name="apply_private_file_fail_title">Private file fail</string>
    <string name="apply_remount_fail">Remounting the partition as read/write failed!</string>
    <string name="apply_remount_fail_title">Remount failed</string>
    <string name="apply_copy_fail">Copying of hosts file failed!</string>
    <string name="apply_copy_fail_title">Copy failed</string>
    <string name="apply_success_subtitle">Successful hosts sources:</string>
    <string name="apply_success_title">Applying successful</string>
    <string name="apply_success_dialog">"Applying was successful.
It may be necessary to reboot Android for the changes to take effect.

Do you want to reboot?
(To prevent data loss make sure no app uses the sdcard at the moment!)"</string>
    <string name="apply_symlink_successful">"Symlink was created successful.
It may be necessary to reboot Android for the changes to take effect.

Do you want to reboot?
(To prevent data loss make sure no app uses the sdcard at the moment!)"</string>
    <string name="apply_symlink_successful_title">Symlink creation successful</string>
    <string name="apply_symlink_fail">"Symlink could not be created by Android.
This fails mostly due to a 'feature' called S-ON on HTC phones!

A solution is to boot your phone into recovery mode and create the symlink there with 'ln -s /data/data/hosts /system/etc/hosts'.

If this does not work search the Internet for S-OFF and your phone."</string>
    <string name="apply_symlink_fail_title">Symlink creation failed</string>
    <string name="apply_help">Please read Help for more information.</string>
    <string name="apply_apn_proxy">"A APN proxy is set on your Android!
AdAway will not work reliable when on Mobile Networks like 3G. You can deactivate that proxy by going to your selected APN (On Android 4: Wireless and networks -> More… -> Mobile Networks -> Access Point Names) and remove the value in the proxy field."</string>
    <string name="apply_apn_proxy_title">APN proxy set!</string>
    <string name="no_connection">The connection to the Internet is not working.</string>
    <string name="no_connection_title">No Connection</string>
    <string name="download_dialog">Downloading…</string>
    <string name="apply_dialog">Applying…</string>
    <string name="apply_dialog_lists">Applying Blacklist and Whitelist</string>
    <string name="apply_dialog_hostnames">Parsing and merging hosts files</string>
    <string name="apply_dialog_hosts">Building hosts file</string>
    <string name="apply_dialog_apply">Applying hosts file</string>
    <string name="apply_fail">"Applying the hosts file to your system failed!
Try changing the target hosts file in preferences to /data/data/hosts."</string>
    <string name="apply_fail_title">Applying failed</string>
    <string name="revert_successful">"You reverted to the default hosts file.
It may be necessary to reboot Android for the changes to take effect.

Do you want to reboot?
(To prevent data loss make sure no app uses the sdcard at the moment!)"</string>
    <string name="revert_successful_title">Reverting successful</string>
    <string name="revert_problem">Reverting failed due to unknown reasons.</string>
    <string name="revert_problem_title">Reverting failed!</string>
    <string name="download_fail_dialog">None of your enabled hosts sources are reachable! Are you properly connected to the Internet?</string>
    <string name="download_fail_title">Download failed</string>
    <string name="no_private_file">Private file can not be created.</string>
    <string name="no_private_file_title">Private file creation failed</string>
</resources>