<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="@*android:style/TextAppearance.Small" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_tcpdump_text" />
        <ToggleButton android:id="@id/tcpdump_fragment_toggle_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:textOn="@string/button_tcpdump_toggle_checked" android:textOff="@string/button_tcpdump_toggle_unchecked" android:onClick="tcpdumpToggleOnClick" />
        <Button android:id="@id/tcpdump_fragment_open_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/button_tcpdump_open" android:onClick="tcpdumpOpenOnClick" />
        <Button android:id="@id/tcpdump_fragment_delete_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/button_tcpdump_delete" android:onClick="tcpdumpDeleteOnClick" />
    </LinearLayout>
</ScrollView>