<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ToggleButton android:id="@id/webserver_fragment_toggle_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textOn="@string/button_webserver_toggle_checked" android:textOff="@string/button_webserver_toggle_unchecked" android:onClick="webserverOnClick" />
    <TextView android:textAppearance="@*android:style/TextAppearance.Small" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/button_webserver_toggle_text" android:layout_weight="1.0" />
</LinearLayout>