<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/donations__paypal" />
    <TextView android:textAppearance="@*android:style/TextAppearance.Small" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/donations__paypal_description" />
    <Button android:id="@id/donations__paypal_donate_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/donations__google_android_market_donate_button" />
</LinearLayout>