<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="?android:listPreferredItemHeight" android:onClick="applyOnClick">
        <FrameLayout android:orientation="horizontal" android:id="@id/status_layout" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginRight="6.0dip" android:layout_alignParentTop="true" android:layout_alignParentBottom="true">
            <ProgressBar android:layout_gravity="center" android:id="@id/status_progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" />
            <ImageView android:id="@id/status_icon" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/status_update" />
        </FrameLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_toRightOf="@id/status_layout"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/status_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="1" android:scrollHorizontally="true" />
            <TextView android:ellipsize="marquee" android:gravity="center_vertical" android:id="@id/status_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="1" />
        </LinearLayout>
    </RelativeLayout>
    <Button android:id="@id/apply_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/button_apply" android:onClick="applyOnClick" />
    <TextView android:textAppearance="@*android:style/TextAppearance.Small" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_apply_text" />
    <Button android:id="@id/revert_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/button_revert" android:onClick="revertOnClick" />
    <TextView android:textAppearance="@*android:style/TextAppearance.Small" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_revert_text" />
</LinearLayout>